# cloudflare-dns-updater

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build_linux.yml  build_linux_arm.yml
examples/k8s/: README.md  dns.yaml
kubernetes/: README.md
kubernetes/crds/v1/: crds.cloudflare.com_accesstoken.yaml  crds.cloudflare.com_dnsrecords.yaml  crds.cloudflare.com_ipchangedetector.yaml
kubernetes/images/linux/: Dockerfile
kubernetes/images/linux-arm/: Dockerfile
kubernetes/manifests/linux/: cloudflare-dns-updater.yaml
kubernetes/manifests/linux-arm/: cloudflare-dns-updater.yaml
src/: cloudflare.rs  lib.rs  main.rs
src/client/: main.rs
src/controller/: main.rs
systemd/: README.md  cloudflare.env  cloudflare.service
tests/centos-7/: Dockerfile
tests/raspbian-buster-20180926/: Dockerfile
tests/ubuntu/: Dockerfile
tests/ubuntu-1910/: Dockerfile
