[package]
name = "cloudflare"
version = "0.1.0"
authors = ["Eden Reich <eden.reich@gmail.com>"]
edition = "2021"

[dependencies]
clap = "2.33.0"
hyper = "0.13"
hyper-tls = "0.4.1"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "cloudflare"
path = "src/cloudflare.rs"