[package]
name = "cloudflare"
version = "0.1.0"
authors = ["Eden Reich <eden.reich@gmail.com>"]
edition = "2021"

[dependencies]
clap = "2.33.0"
hyper = "0.13"
hyper-tls = "0.4.1"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
kube = { version = "0.71.0", default-features = false, features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_23"] }
log = "0.4.16"
env_logger = "0.9.0"
futures = "0.3.21"
schemars = "0.8.8"
anyhow = "1.0.44"
either = "1.6.1"
validator = { version = "0.14.0", features = ["derive"] }
thiserror = "1.0.29"

[[bin]]
name = "cloudflare"
path = "src/cloudflare.rs"